# ash

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Changelog.md  README.md  appveyor.yml  bors.toml  clippy.json  deny.toml  imdone-help.md  rustfmt.toml
ash/: Cargo.toml  build.rs
ash-examples/: Cargo.toml
ash-examples/shader/texture/: frag.spv  texture.frag
ash-examples/shader/triangle/: triangle.vert
ash-examples/src/: lib.rs
ash-patch/: Cargo.toml
ash-patch/src/: extensions_generated.rs  lib.rs  tables.rs  vk.rs
ash-patch/src/extensions/amd/: mod.rs
ash-patch/src/extensions/ext/: debug_marker.rs  debug_utils.rs  full_screen_exclusive.rs  host_image_copy.rs  image_drm_format_modifier.rs  metal_objects.rs  pipeline_properties.rs  private_data.rs  shader_object.rs  swapchain_maintenance1.rs
ash-patch/src/extensions/khr/: android_surface.rs  calibrated_timestamps.rs  deferred_host_operations.rs  device_group.rs  display.rs  external_memory_fd.rs  external_memory_win32.rs  external_semaphore_fd.rs  external_semaphore_win32.rs  get_physical_device_properties2.rs  get_surface_capabilities2.rs  performance_query.rs  pipeline_executable_properties.rs  ray_tracing_maintenance1.rs  sampler_ycbcr_conversion.rs  video_queue.rs  wayland_surface.rs  xcb_surface.rs  xlib_surface.rs
ash-patch/src/extensions/mvk/: ios_surface.rs
ash-patch/src/extensions/nv/: coverage_reduction_mode.rs  cuda_kernel_launch.rs  low_latency2.rs  mesh_shader.rs
ash-patch/src/vk/: aliases.rs  bitflags.rs  const_debugs.rs  constants.rs  definitions.rs  enums.rs  extensions.rs  feature_extensions.rs  features.rs  platform_types.rs
ash-rewrite/: Cargo.toml
ash-rewrite/src/: lib.rs
ash-window/: Cargo.toml  Changelog.md  README.md
ash-window/examples/: beryllium.rs  winit.rs  xcb.rs
ash-window/src/: lib.rs
ash/examples/: hello.rs
ash/src/: allocator.rs  buffer.rs  commandpool.rs  compat.rs  device.rs  entry.rs  entry_libloading.rs  entry_linked.rs  extensions.rs  extensions_generated.rs  feature.rs  fence.rs  instance.rs  lib.rs  load.rs  macros.rs  prelude.rs  surface.rs  tables.rs  util.rs  version.rs  vk.rs
ash/src/extensions/: android_surface.rs  debug_marker.rs  debug_report.rs  debug_utils.rs  display_swapchain.rs  ios_surface.rs  macos_surface.rs  mir_surface.rs  mod.rs  surface.rs  swapchain.rs  wayland_surface.rs  win32_surface.rs  xcb_surface.rs  xlib_surface.rs
ash/src/extensions/amd/: anti_lag.rs  buffer_marker.rs  mod.rs  shader_info.rs
ash/src/extensions/amdx/: mod.rs  shader_enqueue.rs
ash/src/extensions/android/: external_memory_android_hardware_buffer.rs  mod.rs
ash/src/extensions/experimental/: amd.rs
ash/src/extensions/ext/: acquire_drm_display.rs  buffer_device_address.rs  calibrated_timestamps.rs  debug_marker.rs  debug_report.rs  debug_utils.rs  depth_clamp_control.rs  descriptor_buffer.rs  descriptor_heap.rs  descriptor_indexing.rs  device_generated_commands.rs  display_control.rs  display_surface_counter.rs  extended_dynamic_state.rs  extended_dynamic_state2.rs  extended_dynamic_state3.rs  full_screen_exclusive.rs  hdr_metadata.rs  headless_surface.rs  host_image_copy.rs  image_compression_control.rs  image_drm_format_modifier.rs  mesh_shader.rs  metal_objects.rs  metal_surface.rs  mod.rs  physical_device_drm.rs  pipeline_properties.rs  private_data.rs  sample_locations.rs  sampler_filter_minmax.rs  shader_object.rs  swapchain_maintenance1.rs  tooling_info.rs  vertex_input_dynamic_state.rs
ash/src/extensions/google/: display_timing.rs  mod.rs
ash/src/extensions/khr/: acceleration_structure.rs  android_surface.rs  buffer_device_address.rs  calibrated_timestamps.rs  cooperative_matrix.rs  copy_commands2.rs  create_render_pass2.rs  create_renderpass2.rs  debug_marker.rs  dedicated_allocation.rs  deferred_host_operations.rs  device_address_commands.rs  device_group.rs  device_group_creation.rs  display.rs  display_swapchain.rs  draw_indirect_count.rs  dynamic_rendering.rs  dynamic_rendering_local_read.rs  external_fence_capabilities.rs  external_fence_fd.rs  external_fence_win32.rs  external_memory_capabilities.rs  external_memory_fd.rs  external_memory_win32.rs  external_semaphore_capabilities.rs  external_semaphore_fd.rs  external_semaphore_win32.rs  get_display_properties2.rs  get_memory_requirements2.rs  get_physical_device_properties2.rs  get_surface_capabilities2.rs  line_rasterization.rs  (+30 more)
ash/src/vk/: aliases.rs  bitflags.rs  const_debugs.rs  constants.rs  definitions.rs  enums.rs  extensions.rs  feature_extensions.rs  features.rs  macros.rs  native.rs  platform_types.rs  prelude.rs
ash/tests/: constant_size_arrays.rs  display.rs  ptrchain.rs
ash/tests/fail/: long_lived_root_struct_borrow.rs  long_lived_root_struct_borrow.stderr
examples/: Cargo.toml  frag.spv  triangle.frag  vert.spv
examples/shader/quad/: frag.spv  quad.frag  shader.spv  vert.spv
examples/shader/texture/: vert.spv
examples/shader/triangle/: shader.spv  vert.spv
examples/src/: lib.rs  main.rs
examples/texture/: Cargo.toml
examples/texture/shader/: frag.spv  triangle.frag  triangle.vert  vert.spv
examples/texture/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
generator/: Cargo.toml
generator-rewrite/: Cargo.toml
generator-rewrite/src/: item.rs  lib.rs  main.rs  output.rs  util.rs
generator-rewrite/src/item/: structure.rs
generator-rewrite/src/items/: mod.rs  structures.rs
generator-rewrite/src/output/: vfs.rs
generator/Vulkan-Headers/: .cmake-format.py  .gitignore  CMakeLists.txt  README.md
generator/Vulkan-Headers/registry/: validusage.json
generator/src/: lib.rs
generator2/: Cargo.toml  enums.rs  out
generator2/src/: constants.rs  enums.rs  extensions.rs  functions.rs  lib.rs  main.rs  parse.rs  structs.rs  template.rs
generator2/src/templates/: define_handle.rs  enum.rs.template  handle_nondispatchable.rs  platform_types.rs  vk_acceleration_structure_instance_khr.rs  vk_bitflags_wrapped.rs
vulkan-sys/: Cargo.toml
vulkan-sys/src/: vk.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+63 files in other folders)
