[workspace]
resolver = "2"
members = [
    "analysis",
    "ash",
    "ash-examples",
    "ash-rewrite",
    "ash-window",
    "generator",
    "generator-rewrite",
]

# [patch.crates-io]
# # https://github.com/krolli/vk-parse/pull/36
# vk-parse = { git = "https://github.com/krolli/vk-parse", rev = "dfe8863" }
