[package]
authors = [
    "Maik Klein <maikklein@googlemail.com>",
    "Benjamin Saunders <ben.e.saunders@gmail.com>",
    "Marijn Suijten <marijn@traverseresearch.nl>",
]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api",
]
description = "Vulkan bindings for Rust"
edition = "2021"
keywords = ["gamedev", "graphics", "vulkan", "bindings"]
license = "MIT OR Apache-2.0"
name = "ash-patch"
readme = "../README.md"
repository = "https://github.com/ash-rs/ash"
rust-version = "1.69.0"
version = "0.38.0+1.3.296"

[dependencies]
ash = "0.38.0+1.3.281"
libloading = { version = "0.8", optional = true }

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["loaded", "debug", "std"]
# Link the Vulkan loader at compile time.
linked = []
# Support searching for the Vulkan loader manually at runtime.
loaded = ["libloading", "std"]
# Whether Vulkan structs should implement Debug.
debug = []
# Whether the standard library should be required
std = []

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
