[package]
name = "ash-window"
version = "0.12.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Interop library between ash and raw-window-handle"
documentation = "https://docs.rs/ash-window"
repository = "https://github.com/MaikKlein/ash"
readme = "README.md"
keywords = ["window", "ash", "graphics"]
categories = ["game-engines", "graphics"]
exclude = [".github/*"]
workspace = ".."
edition = "2021"
rust-version = "1.60.0"

[dependencies]
ash = { path = "../ash", version = "0.37", default-features = false }
raw-window-handle = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.3"

[dev-dependencies]
winit = "0.28.0"
ash = { path = "../ash", version = "0.37", default-features = false, features = ["linked"] }

[[example]]
name = "winit"
required-features = ["ash/linked"]
