[package]
name = "ash-window"
version = "0.12.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Interop library between ash and raw-window-handle"
documentation = "https://docs.rs/ash-window"
repository = "https://github.com/MaikKlein/ash"
readme = "README.md"
keywords = ["window", "ash", "graphics"]
categories = ["game-engines", "graphics"]
exclude = [".github/*"]
workspace = ".."
edition = "2021"
rust-version = "1.64.0"

[dependencies]
ash = { path = "../ash", version = "0.37", default-features = false }
raw-window-handle = "0.5"

[target.'cfg(unix)'.dependencies]
x11-dl = { version = "2.21.0", optional = true }
x11 = { version = "2.21.0", features = ["xlib"], optional = true }
xcb = { version = "1.2.2", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = "0.3"

[dev-dependencies]
winit = "0.28.0"
ash = { path = "../ash", version = "0.37", default-features = false, features = ["linked"] }

[features]
default = ["x11-dl", "xcb"]

[[example]]
name = "winit"
required-features = ["ash/linked"]

[[example]]
name = "xcb"
required-features = ["ash/linked", "xcb"]
