[package]
name = "ash"
version = "0.38.0+1.3.281"
authors = [
    "Maik Klein <maikklein@googlemail.com>",
    "Benjamin Saunders <ben.e.saunders@gmail.com>",
    "Marijn Suijten <marijn@traverseresearch.nl>",
]
description = "Vulkan bindings for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ash-rs/ash"
readme = "../README.md"
keywords = ["gamedev", "graphics", "vulkan", "bindings"]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api"
]
edition = "2021"
rust-version = "1.69.0"

[dependencies]
libloading = { version = "0.8", optional = true }

[features]
default = ["loaded", "debug", "std"]
# Link the Vulkan loader at compile time.
linked = []
# Support searching for the Vulkan loader manually at runtime.
loaded = ["libloading", "std"]
# Whether Vulkan structs should implement Debug.
debug = []
# Whether the standard library should be required
std = []

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
