[package]
authors = [
    "Maik Klein <maikklein@googlemail.com>",
    "Benjamin Saunders <ben.e.saunders@gmail.com>",
    "Marijn Suijten <marijn@traverseresearch.nl>",
]
categories = [
    "api-bindings",
    "external-ffi-bindings",
    "game-development",
    "graphics",
    "rendering::graphics-api",
]
description = "Vulkan bindings for Rust"
edition = "2021"
keywords = ["gamedev", "graphics", "vulkan", "bindings"]
license = "MIT OR Apache-2.0"
name = "tracel-ash"
readme = "../README.md"
repository = "https://github.com/ash-rs/ash"
rust-version = "1.69.0"
version = { workspace = true }

[dependencies]
ash = "0.38.0"
# Closest to the feature set we need, but might replace it with a custom macro to support u32 as
# a bitfield representation
c2rust-bitfields = "0.20"

[dev-dependencies]
trybuild = "1.0"

[features]
default = ["loaded", "debug", "std"]
# Link the Vulkan loader at compile time.
linked = ["ash/linked"]
# Support searching for the Vulkan loader manually at runtime.
loaded = ["std", "ash/loaded"]
# Whether Vulkan structs should implement Debug.
debug = ["ash/debug"]
# Whether the standard library should be required
std = ["ash/std"]

[package.metadata.release]
no-dev-version = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
