[package]
name = "examples"
version = "0.1.0"
authors = ["maik klein <maikklein@googlemail.com>"]

[dependencies]
winit = "0.16"
image = "0.10.4"
ash = { path = "../ash" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["windef", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal-rs = "0.6"
cocoa = "0.13"
objc = "0.2.2"
