[package]
name = "generator-rewrite"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
analysis = { path = "../analysis" }
tracing = "0.1"
tracing-subscriber = "0.3"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing"] }
prettyplease = "0.2"
indexmap = "2"
