[package]
name = "generator"
version = "0.1.0"
authors = ["Maik Klein <maikklein@googlemail.com>"]
edition = "2021"
publish = false

[dependencies]
# Pin version to have control over how ash/src/vk/native.rs
# is generated (there is a CI check that validates that this
# file is generated as currently checked in): 
bindgen = "=0.69.4"
heck = "0.5"
itertools = "0.13"
nom = "7.1"
once_cell = "1.7"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.4"
vk-parse = { version = "0.13", features = ["vkxml-convert"] }
vkxml = "0.3"

[dependencies.syn]
version = "2.0"
features = ["full", "extra-traits"]
