[package]
authors = ["Maik Klein <maikklein@googlemail.com>"]
edition = "2021"
name = "generator"
publish = false
version = "0.1.0"

[dependencies]
# Pin version to have control over how ash/src/vk/native.rs
# is generated (there is a CI check that validates that this
# file is generated as currently checked in): 
bindgen = "=0.69.4"
heck = "0.5"
itertools = "0.14"
nom = "8"
once_cell = "1.7"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.4"
vk-parse = { git = "https://github.com/krolli/vk-parse.git", features = [
    "vkxml-convert",
] }
vkxml = "0.3"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "2.0"
