[package]
name = "generator2"
version = "0.1.0"
authors = ["Maik Klein <maikklein@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vk = { package = "vk-parse", version = "0.5" }
heck = "0.3"

nom = "6"
