[package]
name = "vulkan-sys"
version = "1.1.79"
authors = ["maik klein <maikklein@googlemail.com>"]
description = "Vulkan bindings for Rust"
license = "MIT"
repository = "https://github.com/MaikKlein/ash"
readme = "../README.md"
keywords = ["vulkan", "graphic"]
documentation = "https://docs.rs/ash"

[dependencies]
libc = "0.2.26"

[package.metadata.release]
no-dev-version = true
