[package]
name = "xtask"
version = "1.0.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
strum = { workspace = true }
tracel-xtask = { workspace = true }
glob = "0.3.1"

[dev-dependencies]
rstest = { workspace = true }
